Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15505

Fix wsrep XID storage byte order

    XMLWordPrintable

Details

    Description

      The sequence number part of wsrep XID is currently stored in host byte order into XID data buffer. This will become a problem for example in a case when a physical backup is prepared on a machine with big endian architecture and is recovered on a machine with little endian architecture. The recovered sequence number will have wrong value.

      A solution for this problem is to store wsrep XID sequence number part in little endian byte order into XID data buffer by using ```int8store()``` and to read the seqno part with ```sint8korr()```.

      In order to keep backwards compatibility, the seqno should be read in host byte order from TRX_SYS page when upgrading.

      Attachments

        Activity

          People

            marko Marko Mäkelä
            teemu.ollakka Teemu Ollakka
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: