storage/innobase/trx/trx0rseg.cc
@@ -35,31 +35,14 @@ Created 3/26/1996 Heikki Tuuri
 #include <algorithm>
 
 #ifdef WITH_WSREP
+#include <mysql/service_wsrep.h>
 
 #ifdef UNIV_DEBUG
 /** The latest known WSREP XID sequence number */
-static long long wsrep_seqno = -1;
+static wsrep_seqno_t wsrep_seqno = -1;
 #endif /* UNIV_DEBUG */
 /** The latest known WSREP XID UUID */
 static unsigned char wsrep_uuid[16];
-
-/** Read WSREP XID UUID.
-@param[in] xid WSREP XID
-@return Pointer to the first byte of the UUID.
-*/
-
-static inline const byte* read_wsrep_xid_uuid(const XID* xid)
-{
-	return reinterpret_cast<const byte*>(xid->data + 8);
-}
-
-/** Read WSREP XID seqno */
-static inline long long read_wsrep_xid_seqno(const XID* xid)
-{
-	long long seqno;
-	memcpy(&seqno, xid->data + 24, sizeof(long long));
-	return seqno;
-}
 
 /** Update the WSREP XID information in rollback segment header.
 @param[in,out]	rseg_header	rollback segment header
@@ -71,12 +54,12 @@ trx_rseg_update_wsrep_checkpoint(
 	const XID*	xid,
 	mtr_t*		mtr)
 {
-	ut_ad(xid->formatID == 1);
+	ut_ad(wsrep_is_wsrep_xid(xid));
 
 #ifdef UNIV_DEBUG
 	/* Check that seqno is monotonically increasing */
-	long long xid_seqno = read_wsrep_xid_seqno(xid);
-	const byte* xid_uuid = read_wsrep_xid_uuid(xid);
+	wsrep_seqno_t xid_seqno = wsrep_xid_seqno(xid);
+	const byte* xid_uuid = wsrep_xid_uuid(xid);
 
 	if (!memcmp(xid_uuid, wsrep_uuid, sizeof wsrep_uuid)) {
 		ut_ad(xid_seqno > wsrep_seqno);
@@ -125,7 +108,7 @@ void trx_rseg_update_wsrep_checkpoint(const XID* xid)
 
 	trx_rseg_update_wsrep_checkpoint(rseg_header, xid, &mtr);
 
-	const byte* xid_uuid = read_wsrep_xid_uuid(xid);
+	const byte* xid_uuid = wsrep_xid_uuid(xid);
 	if (memcmp(wsrep_uuid, xid_uuid, sizeof wsrep_uuid)) {
 		memcpy(wsrep_uuid, xid_uuid, sizeof wsrep_uuid);
 
@@ -203,6 +186,17 @@ static bool trx_rseg_init_wsrep_xid(const page_t* page, XID& xid)
 	memcpy(xid.data,
 	       TRX_SYS + TRX_SYS_WSREP_XID_INFO
 	       + TRX_SYS_WSREP_XID_DATA + page, XIDDATASIZE);
+
+	/* Wsrep XID seqno part in TRX_SYS page was written in host byte
+	order. However, in the XID which gets written to the rollback
+	segment header the byte order is little endian. On big endian
+	machines swap the seqno part byte order. */
+#ifdef WORDS_BIGENDIAN
+	wsrep_seqno_t seqno;
+	memcpy(&seqno, xid.data + 24, sizeof seqno);
+	mach_swap_byte_order(xid.data + 24, &seqno, sizeof seqno);
+#endif /* WORDS_BIGENDIAN */
+
 	return true;
 }
 
@@ -239,14 +233,14 @@ bool trx_rseg_read_wsrep_checkpoint(XID& xid)
 		}
 
 		XID tmp_xid;
-		long long tmp_seqno = 0;
+		wsrep_seqno_t tmp_seqno = 0;
 		if (trx_rseg_read_wsrep_checkpoint(rseg_header, tmp_xid)
-		    && (tmp_seqno = read_wsrep_xid_seqno(&tmp_xid))
+		    && (tmp_seqno = wsrep_xid_seqno(&tmp_xid))
 		    > max_xid_seqno) {
 			found = true;
 			max_xid_seqno = tmp_seqno;
 			xid = tmp_xid;
-			memcpy(wsrep_uuid, read_wsrep_xid_uuid(&tmp_xid),
+			memcpy(wsrep_uuid, wsrep_xid_uuid(&tmp_xid),
 			       sizeof wsrep_uuid);
 		}
 	}
